# fixprace-parser

./: README.md  pyproject.toml
fixprace/: scrapy.cfg  urls.txt
fixprace/fixprace/: items.py  middlewares.py  pipelines.py  settings.py
fixprace/fixprace/spiders/: product_spiders.py
