[tool.poetry]
name = "fixprace"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{ include = "fixprace_parser" }]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
